@@ -1,20 +1,25 @@
 package com.rabbitmqconsumer;
 
+import org.springframework.amqp.support.converter.MessageConverter;
+import org.springframework.amqp.support.converter.SimpleMessageConverter;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
+import org.springframework.context.annotation.Bean;
+
+import java.util.Collections;
 
 @SpringBootApplication
 public class RabbitMqConsumerApplication {
 
     public static void main(String[] args) {
         SpringApplication.run(RabbitMqConsumerApplication.class, args);
+        System.out.println("RabbitMQ消费者启动成功");
     }
 
-    @org.springframework.context.annotation.Bean
-    public org.springframework.amqp.support.converter.MessageConverter messageConverter() {
-        org.springframework.amqp.support.converter.SimpleMessageConverter converter = new org.springframework.amqp.support.converter.SimpleMessageConverter();
-        converter.setAllowedListPatterns(java.util.List.of("java.util.*", "java.lang.*"));
+    @Bean
+    public MessageConverter messageConverter() {
+        SimpleMessageConverter converter = new SimpleMessageConverter();
+        converter.setAllowedListPatterns(Collections.singletonList("java.util.HashMap"));
         return converter;
     }
-
 }
